Add working Lenet solution

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -302,7 +302,7 @@
     "### converting to grayscale, etc.\n",
     "### Feel free to use as many code cells as needed.\n",
     "import numpy as np\n",
-    "import copy\n",
+    "#import copy\n",
     "\n",
     "#red_min, red_max, red_mean = np.min(X_train[:,:,:,0]), np.max(X_train[:,:,:,0]), np.mean(X_train[:,:,:,0])\n",
     "#blue_min, blue_max, blue_mean = np.min(X_train[:,:,:,1]), np.max(X_train[:,:,:,1]), np.mean(X_train[:,:,:,1])\n",
@@ -348,7 +348,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
